# lifeOS

./: .env.example  .gitignore  404.html  README.md  index.html  index.txt  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  register.html  register.txt  sign-in.html  sign-in.txt  tsconfig.browser.json  tsconfig.node.json
.github/workflows/: deploy.yml  test.yml
_next/static/chunks/: 128-40cd2de923221dee.js  143-7ae388d3d6567bee.js  143-c6110bead9a12f44.js  280-0eb6762d0bf6fca2.js  309-68f66f925c27063c.js  563-0c9cb1b91d2b9fb3.js  563-79e3a3cd2c0eb81b.js  653.3f3362893ab40549.js  695.e5de6ca9acab8a29.js  698-622f5b89ceb21ab9.js  784-1206be467ed983ff.js  85-ff2b2f2fdd90226b.js  aa6769b4-0e7050eaa5b8950b.js  ecd79a34-dba08c212d83b851.js  framework-4e1865d4aff59bd2.js  main-364b2d377214765a.js  main-5b6e09030e851e87.js  main-app-b99e6b27c456775d.js  webpack-70bcf3421720a772.js  webpack-7cc37e7369738d73.js
_next/static/css/: 06d6e87948763f5c.css  1f225e50888a8925.css
ml/entity/: Entity.postman_collection.json  package.json  pyproject.toml
ml/entity/data/: labeled-data.email.csv
ml/entity/lifeos_ml_entity/: entity_trainer.py  http.py  main.py  predictor.py  training_data_cleaner.py  utils.py
ml/generate/: Generate.postman_collection.json  package.json  pyproject.toml
ml/generate/data/: example-data.csv
ml/generate/lifeos_ml_generate/: http.py  main.py  training_data_cleaner.py  utils.py
ml/generate/lifeos_ml_generate/deepseek/: predictor.py  trainer.py
ml/generate/lifeos_ml_generate/llama/: predictor.py  trainer.py
ml/generate/lifeos_ml_generate/t5/: predictor.py  trainer.py
ml/intent/: Intent.postman_collection.json  package.json  pyproject.toml
toolbox/agents/: graph.html  graph.txt
tooling/device_check/: pyproject.toml
tooling/device_check/lifeos_ml_device_check/: main.py
tooling/gpu-runner/: .gitignore  copy.sh  init-wsl2-ssh-managed.ps1  init-wsl2-ssh-network.ps1  join.sh  stop-wsl2.ps1
tooling/llamastack/: run.sh
tooling/load-testing/: package.json  tsconfig.json
tooling/mailhog/: package.json
(+110 files in other folders)
