[tool.poetry]
name = "lifeos-ml-device-check"
version = "0.0.0"
description = ""
authors = ["Luke Bennett"]
license = "UNLICENSED"
package-mode = false

[tool.poetry.dependencies]
accelerate = "^1.2.1"
argparse = "^1.4.0"
python = "^3.12"
torch = "^2.5.1"
transformers = "^4.47.1"

[tool.poetry.scripts]
main = "lifeos_ml_device_check.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
nvitop = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
